// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedItem default snapshot 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <div />
  <WithStyles(IconButton)>
    <MdClose />
  </WithStyles(IconButton)>
</div>
`;

exports[`SelectedItem snapshot with height 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 20,
    }
  }
>
  <div />
  <WithStyles(IconButton)>
    <MdClose />
  </WithStyles(IconButton)>
</div>
`;

exports[`SelectedItem snapshot with valid item 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <div>
    Hi
  </div>
  <WithStyles(IconButton)>
    <MdClose />
  </WithStyles(IconButton)>
</div>
`;
